--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <link rel="stylesheet" href="css/MarkerCluster.Default.css">
         <link rel="stylesheet" href="css/leaflet-search.css">
         <link rel="stylesheet" href="css/leaflet-control-geocoder.Geocoder.css">
-        <link rel="stylesheet" href="css/leaflet-measure.css">
         <style>
-        #map {
-            width: 965px;
-            height: 672px;
+        html, body, #map {
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
         }
         </style>
         <title></title>
@@ -26,6 +27,8 @@
         </div>
         <script src="js/qgis2web_expressions.js"></script>
         <script src="js/leaflet.js"></script>
+        <script src="js/multi-style-layer.js"></script>
+        <script src="js/leaflet-svg-shape-markers.min.js"></script>
         <script src="js/leaflet.rotatedMarker.js"></script>
         <script src="js/leaflet.pattern.js"></script>
         <script src="js/leaflet-hash.js"></script>
@@ -34,10 +37,10 @@
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
         <script src="js/leaflet-control-geocoder.Geocoder.js"></script>
-        <script src="js/leaflet-measure.js"></script>
         <script src="js/leaflet.markercluster.js"></script>
         <script src="js/leaflet-search.js"></script>
-        <script src="data/Zopitaux_0.js"></script>
+        <script src="data/Regions_1.js"></script>
+        <script src="data/hopital_2.js"></script>
         <script>
         var highlightLayer;
         function highlightFeature(e) {
@@ -56,27 +59,102 @@
             highlightLayer.openPopup();
         }
         var map = L.map('map', {
-            zoomControl:true, maxZoom:28, minZoom:1
-        }).fitBounds([[9.104173541438719,0.1925951116022031],[10.248694989946966,1.8376311637118146]]);
+            zoomControl:true, maxZoom:24, minZoom:1
+        }).fitBounds([[8.387065514738804,-0.8060356954116945],[10.643963444738805,2.4378340159166654]]);
         var hash = new L.Hash(map);
         map.attributionControl.setPrefix('<a href="https://github.com/tomchadwin/qgis2web" target="_blank">qgis2web</a> &middot; <a href="https://leafletjs.com" title="A JS library for interactive maps">Leaflet</a> &middot; <a href="https://qgis.org">QGIS</a>');
         var autolinker = new Autolinker({truncate: {length: 30, location: 'smart'}});
-        var measureControl = new L.Control.Measure({
-            position: 'topleft',
-            primaryLengthUnit: 'meters',
-            secondaryLengthUnit: 'kilometers',
-            primaryAreaUnit: 'sqmeters',
-            secondaryAreaUnit: 'hectares'
-        });
-        measureControl.addTo(map);
-        document.getElementsByClassName('leaflet-control-measure-toggle')[0]
-        .innerHTML = '';
-        document.getElementsByClassName('leaflet-control-measure-toggle')[0]
-        .className += ' fas fa-ruler';
         var bounds_group = new L.featureGroup([]);
         function setBounds() {
         }
-        function pop_Zopitaux_0(feature, layer) {
+        map.createPane('pane_googlemap_0');
+        map.getPane('pane_googlemap_0').style.zIndex = 400;
+        var layer_googlemap_0 = L.tileLayer('https://mt1.google.com/vt/lyrs=r&x={x}&y={y}&z={z}', {
+            pane: 'pane_googlemap_0',
+            opacity: 1.0,
+            attribution: '',
+            minZoom: 1,
+            maxZoom: 24,
+            minNativeZoom: 0,
+            maxNativeZoom: 19
+        });
+        layer_googlemap_0;
+        map.addLayer(layer_googlemap_0);
+        function pop_Regions_1(feature, layer) {
+            layer.on({
+                mouseout: function(e) {
+                    for (i in e.target._eventParents) {
+                        e.target._eventParents[i].resetStyle(e.target);
+                    }
+                    if (typeof layer.closePopup == 'function') {
+                        layer.closePopup();
+                    } else {
+                        layer.eachLayer(function(feature){
+                            feature.closePopup()
+                        });
+                    }
+                },
+                mouseover: highlightFeature,
+            });
+            var popupContent = '<table>\
+                    <tr>\
+                        <td colspan="2"><strong>REGION</strong><br />' + (feature.properties['REGION'] !== null ? autolinker.link(feature.properties['REGION'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['CHEF_LIEU'] !== null ? autolinker.link(feature.properties['CHEF_LIEU'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['AREA'] !== null ? autolinker.link(feature.properties['AREA'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['ACRES'] !== null ? autolinker.link(feature.properties['ACRES'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['PERIMETER'] !== null ? autolinker.link(feature.properties['PERIMETER'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['NEWFIELD1'] !== null ? autolinker.link(feature.properties['NEWFIELD1'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2"><strong>datecov</strong><br />' + (feature.properties['datecov'] !== null ? autolinker.link(feature.properties['datecov'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                    <tr>\
+                        <td colspan="2">' + (feature.properties['id'] !== null ? autolinker.link(feature.properties['id'].toLocaleString()) : '') + '</td>\
+                    </tr>\
+                </table>';
+            layer.bindPopup(popupContent, {maxHeight: 400});
+        }
+
+        function style_Regions_1_0() {
+            return {
+                pane: 'pane_Regions_1',
+                opacity: 1,
+                color: 'rgba(250,146,10,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 3.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(196,60,57,0.0)',
+                interactive: false,
+            }
+        }
+        map.createPane('pane_Regions_1');
+        map.getPane('pane_Regions_1').style.zIndex = 401;
+        map.getPane('pane_Regions_1').style['mix-blend-mode'] = 'normal';
+        var layer_Regions_1 = new L.geoJson(json_Regions_1, {
+            attribution: '',
+            interactive: false,
+            dataVar: 'json_Regions_1',
+            layerName: 'layer_Regions_1',
+            pane: 'pane_Regions_1',
+            onEachFeature: pop_Regions_1,
+            style: style_Regions_1_0,
+        });
+        bounds_group.addLayer(layer_Regions_1);
+        map.addLayer(layer_Regions_1);
+        function pop_hopital_2(feature, layer) {
             layer.on({
                 mouseout: function(e) {
                     for (i in e.target._eventParents) {
@@ -106,7 +184,7 @@
                         <td colspan="2"><strong>Nom</strong><br />' + (feature.properties['Nom'] !== null ? autolinker.link(feature.properties['Nom'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <td colspan="2">' + (feature.properties['Population'] !== null ? autolinker.link(feature.properties['Population'].toLocaleString()) : '') + '</td>\
+                        <td colspan="2"><strong>Population</strong><br />' + (feature.properties['Population'] !== null ? autolinker.link(feature.properties['Population'].toLocaleString()) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <td colspan="2">' + (feature.properties['Latitude'] !== null ? autolinker.link(feature.properties['Latitude'].toLocaleString()) : '') + '</td>\
@@ -118,46 +196,68 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_Zopitaux_0_0() {
+        function style_hopital_2_0() {
             return {
-                pane: 'pane_Zopitaux_0',
-                radius: 4.0,
+                pane: 'pane_hopital_2',
+                radius: 10.4,
                 opacity: 1,
-                color: 'rgba(35,35,35,1.0)',
+                color: 'rgba(227,26,28,1.0)',
                 dashArray: '',
                 lineCap: 'butt',
                 lineJoin: 'miter',
-                weight: 1,
+                weight: 2.0,
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(125,139,143,1.0)',
+                fillColor: 'rgba(255,255,255,1.0)',
                 interactive: true,
             }
         }
-        map.createPane('pane_Zopitaux_0');
-        map.getPane('pane_Zopitaux_0').style.zIndex = 400;
-        map.getPane('pane_Zopitaux_0').style['mix-blend-mode'] = 'normal';
-        var layer_Zopitaux_0 = new L.geoJson(json_Zopitaux_0, {
+        function style_hopital_2_1() {
+            return {
+                pane: 'pane_hopital_2',
+                radius: 6.0,
+                opacity: 1,
+                color: 'rgba(227,26,28,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0,
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(227,26,28,1.0)',
+                interactive: true,
+            }
+        }
+        map.createPane('pane_hopital_2');
+        map.getPane('pane_hopital_2').style.zIndex = 402;
+        map.getPane('pane_hopital_2').style['mix-blend-mode'] = 'normal';
+        var layer_hopital_2 = new L.geoJson.multiStyle(json_hopital_2, {
             attribution: '',
             interactive: true,
-            dataVar: 'json_Zopitaux_0',
-            layerName: 'layer_Zopitaux_0',
-            pane: 'pane_Zopitaux_0',
-            onEachFeature: pop_Zopitaux_0,
-            pointToLayer: function (feature, latlng) {
+            dataVar: 'json_hopital_2',
+            layerName: 'layer_hopital_2',
+            pane: 'pane_hopital_2',
+            onEachFeature: pop_hopital_2,
+            pointToLayers: [function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.circleMarker(latlng, style_Zopitaux_0_0(feature));
+                return L.shapeMarker(latlng, style_hopital_2_0(feature));
+            },function (feature, latlng) {
+                var context = {
+                    feature: feature,
+                    variables: {}
+                };
+                return L.shapeMarker(latlng, style_hopital_2_1(feature));
             },
-        });
-        var cluster_Zopitaux_0 = new L.MarkerClusterGroup({showCoverageOnHover: false,
+        ]});
+        var cluster_hopital_2 = new L.MarkerClusterGroup({showCoverageOnHover: false,
             spiderfyDistanceMultiplier: 2});
-        cluster_Zopitaux_0.addLayer(layer_Zopitaux_0);
+        cluster_hopital_2.addLayer(layer_hopital_2);
 
-        bounds_group.addLayer(layer_Zopitaux_0);
-        cluster_Zopitaux_0.addTo(map);
+        bounds_group.addLayer(layer_hopital_2);
+        cluster_hopital_2.addTo(map);
         var osmGeocoder = new L.Control.Geocoder({
             collapsed: true,
             position: 'topleft',
@@ -169,10 +269,10 @@
         document.getElementsByClassName('leaflet-control-geocoder-icon')[0]
         .title += 'Search for a place';
         var baseMaps = {};
-        L.control.layers(baseMaps,{'<img src="legend/Zopitaux_0.png" /> Zopitaux': cluster_Zopitaux_0,}).addTo(map);
+        L.control.layers(baseMaps,{'<img src="legend/hopital_2.png" /> hopital': cluster_hopital_2,'<img src="legend/Regions_1.png" /> Regions': layer_Regions_1,"google map": layer_googlemap_0,}).addTo(map);
         setBounds();
         map.addControl(new L.Control.Search({
-            layer: cluster_Zopitaux_0,
+            layer: cluster_hopital_2,
             initial: false,
             hideMarkerOnCollapse: true,
             propertyName: 'Nom'}));
